--- a/css/main.css
+++ b/css/main.css
@@ -365,4 +365,36 @@ header section {
   padding: 0.5em;
 }
 
+main section {
+  margin: 1em;
+  padding: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  max-width: 1200px;
+  border-bottom: 1px solid #444;
+}
+main section h4, main section h3 {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+main section .course {
+  display: flex;
+  flex-wrap: wrap;
+}
+main section .course .title {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #509e98;
+  flex: 0 0 33.3%;
+  max-width: 33%;
+}
+main section .course .descrition {
+  flex: 0 0 66.6%;
+  max-width: 66.6%;
+}
+main section .course .descrition p {
+  padding-left: 1em;
+}
+
 /*# sourceMappingURL=main.css.map */
