--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -54,7 +54,7 @@ main{
       .title {
         font-weight: bold;
         text-transform: uppercase;
-        color: #509e98;
+        color: $color-brand;
         flex: 0 0 33.3%;
         max-width: 33%;
       }
@@ -68,8 +68,31 @@ main{
         }
       }
       
+    }
+  }
+}
+
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+  
+  .column {
+    flex: 0 0 50%;
+    max-width: 50%;
+    
+    ul{
+      list-style-type: none;
+      margin: 0px;
+      padding: 0px;
       
-      
+      li{
+        padding-left: 1.5em;
+        &::before{
+          content: '►';
+          padding-right: .5em;
+          color: $color-brand;
+        }
+      }
     }
   }
 }
