--- a/css/main.css
+++ b/css/main.css
@@ -334,16 +334,57 @@ template {
 body {
   font-size: 16px;
   line-height: 1.8em;
-  font-family: sans-serif;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  overflow-x: hidden;
+}
+
+h1, h4, h3 {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+ul li {
+  padding-left: 1.5em;
+}
+ul li::before {
+  content: "►";
+  padding-right: .5em;
+  color: #eb5252;
+}
+
+a {
+  text-decoration: none;
+  color: #650c0c;
+}
+a:hover {
+  color: #e52525;
+}
+
+.blur {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  bottom: -10px;
+  left: -10px;
+  background-image: url("../img/bgc.jpg");
+  background-position: fixed;
+  background-size: cover;
+  filter: blur(5px);
 }
 
 header {
+  position: relative;
   background-size: cover;
-  background-image: url("../img/bg.jpg");
-  background-position: fixed;
+  background-image: url("../img/bgc.jpg");
+  background-position: center;
   color: #ffffff;
-  padding: 2em;
+  text-shadow: 1px 0px 5px black, 1px 2px 5px black, 1px 4px 5px black;
+  padding: 3em;
   text-align: center;
 }
 header img {
@@ -352,13 +393,15 @@ header img {
   display: block;
   width: 150px;
   height: 150px;
+  position: relative;
   border-radius: 50%;
 }
 header h1 {
-  text-transform: uppercase;
+  position: relative;
   margin: 1em 0;
 }
 header section {
+  position: relative;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -366,58 +409,126 @@ header section {
   padding: 0.5em;
 }
 
-main section {
+section {
   margin: 1em;
   padding: 1em;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  max-width: 1200px;
-  border-bottom: 1px solid #444;
+  max-width: 1000px;
+  border-bottom: 1px solid #bbbbbb;
 }
-main section h4, main section h3 {
-  text-transform: uppercase;
-  font-weight: bold;
+section:last-child {
+  border: none;
 }
-main section .course {
+@media screen and (max-width: 768px) {
+  section h3 {
+    text-align: center;
+  }
+}
+
+.course {
   display: flex;
   flex-wrap: wrap;
 }
-main section .course .title {
+.course .title {
+  padding-top: 1em;
   font-weight: bold;
-  text-transform: uppercase;
-  color: #c01717;
+  color: #eb5252;
   flex: 0 0 33.3%;
-  max-width: 33%;
 }
-main section .course .descrition {
+.course .descrition {
   flex: 0 0 66.6%;
-  max-width: 66.6%;
 }
-main section .course .descrition p {
+.course .descrition p {
   padding-left: 1em;
+}
+.course hr {
+  flex: 0 0 100%;
+  max-width: 10%;
+  color: white;
+  padding: 0;
+  margin: 4px auto;
+}
+@media screen and (max-width: 768px) {
+  .course {
+    display: block;
+    text-align: center;
+    width: 90%;
+  }
 }
 
 .skills {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 3em;
 }
 .skills .column {
   flex: 0 0 50%;
-  max-width: 50%;
 }
-.skills .column ul {
-  list-style-type: none;
-  margin: 0px;
-  padding: 0px;
+.skills .column h4 {
+  text-transform: none;
+  font-weight: 700;
 }
-.skills .column ul li {
+@media screen and (max-width: 576px) {
+  .skills .column {
+    flex: 0 0 100%;
+  }
+}
+
+.education article {
+  padding-left: 3em;
+  line-height: 1.8em;
+  margin-top: 0.5em;
+}
+.education article .school {
+  font-weight: bold;
+}
+.education article .school span {
+  font-weight: 400;
+  color: #999999;
+  text-decoration: underline;
+}
+.education article .descrition {
+  padding-left: 5em;
+}
+
+.experience {
+  padding-bottom: 2em;
+}
+.experience article {
+  padding-left: 3em;
+  margin-top: 2em;
+}
+.experience article .company span {
+  font-weight: 400;
+  color: #999999;
+  text-decoration: underline;
+}
+.experience article .description ul li {
   padding-left: 1.5em;
 }
-.skills .column ul li::before {
-  content: '►';
+.experience article .description ul li::before {
+  content: "✔";
   padding-right: .5em;
-  color: #c01717;
+  color: #eb5252;
+}
+
+footer {
+  text-align: right;
+  color: #ffffff;
+  background-color: lightcoral;
+  padding: 1em 1.5em;
+}
+@media screen and (max-width: 768px) {
+  footer {
+    text-align: center;
+  }
+}
+
+.dashed-none {
+  list-style-type: none;
+  padding-left: none;
 }
 
 /*# sourceMappingURL=main.css.map */
