--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,7 +6,9 @@ $breakpoints: (
   'large'  : 992px,
   'xlarge' : 1200px
 );
+//background
 
+$background-image: url("../img/bg4.png");
 //colors
 $white : #ffffff;
 $black : #000000;
