--- a/css/main.css
+++ b/css/main.css
@@ -371,16 +371,16 @@ a:hover {
   right: -10px;
   bottom: -10px;
   left: -10px;
-  background-image: url("../img/bgc.jpg");
-  background-position: fixed;
+  background-image: url("../img/bg4.png");
+  background-position: center;
   background-size: cover;
-  filter: blur(5px);
+  filter: blur(0px);
 }
 
 header {
   position: relative;
   background-size: cover;
-  background-image: url("../img/bgc.jpg");
+  background-image: url("../img/bg4.png");
   background-position: center;
   color: #ffffff;
   text-shadow: 1px 0px 5px black, 1px 2px 5px black, 1px 4px 5px black;
