--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,68 +1,70 @@
 .blur {
   @include abs-pos(-10px);
-  background-image: url("../img/bgc.jpg");
-  background-position: fixed;
+  background-image: $background-image;
+  background-position: center;
   background-size: cover;
-  filter: blur(5px);
+  filter: blur(0px);
 }
+
 //Header
 header {
   position: relative;
   background-size: cover;
-  background-image: url("../img/bgc.jpg");
+  background-image: $background-image;
   background-position: center;
   color: $white;
   text-shadow: 1px 0px 5px black,
-               1px 2px 5px black,
-               1px 4px 5px black;
+  1px 2px 5px black,
+  1px 4px 5px black;
   padding: $padding-indent;
   text-align: center;
-  
+
   img {
     @include center-block;
     @include box-size(150px);
     position: relative;
     border-radius: 50%;
   }
-  
-  h1{
+
+  h1 {
     position: relative;
     margin: 1em 0;
   }
-  
-  section{
+
+  section {
     position: relative;
     @include center-block;
     max-width: 740px;
     padding: 0.5em;
-  
+
   }
-  
+
 }
 
 
 //main section
-section{ 
+section {
   margin: 1em;
   padding: 1em;
   @include center-block;
   max-width: $max-width;
   border-bottom: $border-main;
-  &:last-child{
+  &:last-child {
     border: none;
   }
-  
-  h3{
-    @include respond-to(medium){
+
+  h3 {
+    @include respond-to(medium) {
       text-align: center;
     }
   }
 }
+
 //componetn course
 .course {
-    display: flex;
-    flex-wrap: wrap;
-    
+  display: flex;
+  flex-wrap: wrap;
+
   .title {
     padding-top: 1em;
     font-weight: bold;
@@ -77,7 +79,7 @@ section{
       padding-left: 1em;
     }
   }
-  
+
   hr {
     flex: 0 0 100%;
     max-width: 10%;
@@ -86,7 +88,7 @@ section{
     margin: 4px auto;
   }
 
-  @include respond-to(medium){
+  @include respond-to(medium) {
     display: block;
     text-align: center;
     width: 90%;
@@ -96,32 +98,32 @@ section{
 .skills {
   @include flex;
   padding-left: $padding-indent;
-  
+
   .column {
     flex: 0 0 50%;
-    
-    h4{
+
+    h4 {
       text-transform: none;
       font-weight: 700;
     }
-    @include respond-to(small){
+    @include respond-to(small) {
       flex: 0 0 100%;
     }
-    
+
   }
 }
 
 
-.education{
-  article{
+.education {
+  article {
     padding-left: $padding-indent;
     line-height: 1.8em;
     margin-top: 0.5em;
-    
+
     .school {
       font-weight: bold;
-      
-      span{
+
+      span {
         font-weight: 400;
         color: darken($white, 40%);
         text-decoration: underline;
@@ -134,8 +136,8 @@ section{
 }
 
 .experience {
-    padding-bottom: 2em;
-  article{
+  padding-bottom: 2em;
+  article {
     padding-left: $padding-indent;
     margin-top: 2em;
     .company {
@@ -161,8 +163,8 @@ footer {
   color: $white;
   background-color: lighten($color-brand, 10%);
   padding: 1em 1.5em;
-  
-  @include respond-to(medium){
+
+  @include respond-to(medium) {
     text-align: center;
   }
 }
