--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -24,8 +24,26 @@ ul{
 a{
   text-decoration: none;
   color: darken($color-brand, 40%);
-  
+  transition: all 0.1s linear;
   &:hover{
     color: darken($color-brand,10%);
+  }
+}
+
+a.menu {
+  display: inline-block;
+  @include box-size(1.3em);
+  text-decoration: none;
+  color: $white;
+  font-size: 1.3em;
+  border: 1px solid $white;
+  border-radius: 50%;
+  line-height: 1.3em;
+  margin: auto 5px;
+  transition: all 0.1s linear;
+ 
+  &:hover{
+    color: darken($white,20%);
+    transform: scale(1.1);
   }
 }
